program-libs/zero-copy/tests/derive/ui/fail/47_tuple_struct_empty.rs
// Edge case: Empty tuple struct
#![cfg(feature="mut")] use light_zero_copy_derive::{ZeroCopy, ZeroCopyMut};

#[derive(ZeroCopy, ZeroCopyMut)]
#[repr(C)]
pub struct EmptyTuple();

fn main() {}